# python-logfmter

./: .envrc  .gitignore  .pre-commit-config.yaml  FUNDING.yml  HISTORY.md  LICENSE.txt  MANIFEST.in  README.md  flake.nix  pyproject.toml  runtimes.txt  setup.cfg  tox.ini
.github/workflows/: pre-commit-jmurr.yml  pre-commit-simple.yml  pre-commit.yml  test.yml
logfmter/: __init__.py  formatter.py
requirements/: dev.txt  pre-commit.txt  publish.txt  setuptools.txt  test.txt
src/logfmter/: __init__.py  formatter.py
tests/: test_formatter.py
