[metadata]
name = logfmter
version = attr: logfmter.__version__
description = A Python package which supports global logfmt formatted logging.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jteppinette/python-logfmter
author = Joshua Taylor Eppinette
author_email = jteppinette@jteppinette.com
license = MIT

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True

[options.package_data]
logfmter = py.typed
